OpenVi 7.0.12 -> OpenVi 7.0.13-dev: Tue Feb 22 12:13:16 2022
        + Update `README.md` to document usage for `LIBS` variable; also
          correct `OPTFLAGS` to `OPTLEVEL`
        + Update `README.md` to expand external links and information
        + Update `README.md` with citations regarding past multi-byte efforts
        + Update `README.md` to reflect that the traditional `vi` was
          originally part of the *first* Berkeley Software Distribution
        + Respect `LIBS` to set/override the default libraries for linking
        + Make failure to strip non-fatal; fixes `install-strip` and `strip`
          in the case where `./bin/vi` is un-strippable (i.e. `bin/vi` is
          `upx` compressed or missing section headers from `sstrip`ing)
        + Fixes for `vi` recovery mode. From `trondd@`, tested by various,
          ok `afresh1@`
        + Use fancy quotes in `README.md`
        + Update `.gitignore` to add `compile_commands.json`
        + Suppress a few possible warnings
        + Since HiDPI screens are more common, allow terminal dimensions of
          3640x2048; this might need to be further extended for 4K displays

OpenVi 7.0.11 -> OpenVi 7.0.12: Sun Feb 20 12:57:42 2022
        + Update `README.md` with some background info and rationale
        + Always use internal reallocarray; closes GitHub Issue #5

OpenVi 7.0.10 -> OpenVi 7.0.11: Sat Feb 12 19:42:28 2022
        + Silence a few more warnings; adjust default debugging `CFLAGS`
        + Add an initial regex man page (which is not yet installed),
          `docs/USD.doc/re_format/vi_regex.7`
        + Update `LICENSE.md`; fix email address for `millert@`
        + Simplify `db/sys/issetugid.c` ifdef's
        + Update bundled *OpenBSD* cclass.h to `1.7` (2020/12/30 08:54:42)
        + Update bundled *OpenBSD* cname.h to `1.6` (2020/12/30 08:53:30)
        + Update bundled *OpenBSD* engine.c to `1.26` (2020/12/28 21:41:55)